Fix the implying readability issue Closes #8